[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1.37.0", features = ["full"] }
axum = "0.7.5"

jsonwebtoken = "9.2.0"

serde = "1.0.197"

serde_json = "1.0.114"

chrono = "0.4.34"

tower-http = { version = "0.5.2", features = ["cors"] }

http = "1.0"

tower = { version = "0.4", features = ["full"] }

lazy_static = "1.4.0"

# reqwest = "0.12.4"

reqwest = { version = "0.12.4", features = ["json"] }
